--- a/index.html
+++ b/index.html
@@ -681,24 +681,25 @@
       <h2 style="font-size: 26px; color: #0c2340; margin: 0; font-weight: 800; letter-spacing: 1px; text-transform: uppercase;">Introduction</h2>
     </div>
 
-    <div style="text-align: justify; word-break: keep-all;">
-      <p style="font-size: 18px; margin-bottom: 20px; line-height: 1.8; color: #2d3748;">
-        <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Korean-Mexican</b> golfer currently competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
-      </p>
-      
-      <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
-        Since joining the collegiate ranks in 2025, Joshua has focused on adapting his game to the demands of elite NCAA competition, working closely with his coaches and performance advisors to build consistency across all areas of his game.
-      </p>
+   <div style="text-align: justify; word-break: keep-all;">
+  <p style="font-size: 18px; margin-bottom: 20px; line-height: 1.8; color: #2d3748;">
+    <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Korean-Mexican</b> golfer competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
+  </p>
+  
+  <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
+    Since entering collegiate competition in 2025, his development has focused on adapting to the performance demands of NCAA play through structured training and competitive evaluation within the collegiate environment.
+  </p>
 
-      <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
-        <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
-          His development is reflected in steady competitive output, including a 
-          <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.5 Adj. Scoring Average</span> 
-          across 4 Fall Season events. Combined with an 
-          <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">Academic GPA of 3.4</span>, 
-          he continues to prioritize long-term growth as a dependable student-athlete at the national level.
-        </p>
-      </div>
+  <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+    <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
+      Across four Fall season events, Joshua recorded a 
+      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.5 Adj. Scoring Average</span>. 
+      Alongside an 
+      <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">Academic GPA of 3.4</span>, 
+      his profile reflects a steady, process-driven approach to long-term development as a student-athlete.
+    </p>
+  </div>
+</div>
     </div>
   </div>
 
