--- a/index.html
+++ b/index.html
@@ -1022,9 +1022,9 @@
   <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
 </div>
     
-    <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-      "Joshua Hong is a <b>Two-Time National Junior Champion</b> and a strategic asset for the UTSA program. His unique <b>Korean-Mexican heritage</b>, combined with an elite work ethic and a transition from high-performance sports to golf dominance, <b>positions him as a reliable and disciplined student-athlete within a structured collegiate environment.</b>"
-    </div>
+   <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
+  Joshua Hong won the <b>FMG National Junior Championship</b> in Mexico in <b>back-to-back years</b>, a result that had not previously occurred in the championship’s history. He is a member of the <b>UTSA Men’s Golf program</b>. With a Korean-Mexican background, Joshua transitioned to competitive golf after participating in other high-performance sports. His development has followed a <b>structured training and competition pathway</b> within the collegiate golf environment.
+</div>
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
 <a href="https://www.wagr.com/playerprofile/joshua-hong-40704" target="_blank" style="text-decoration: none; background: #1a73e8; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 8px; transition: opacity 0.2s;">
