--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
   
 
 
-<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="insight-section" style="max-width: 900px; margin: 0 auto 100px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <input type="checkbox" id="card-toggle" style="display: none;">
 
@@ -529,7 +529,7 @@
     .insight-card-wrapper {
       position: relative;
       width: 100%;
-      /* 내부 콘텐츠 길이에 맞게 가변적으로 변하도록 기본 높이 상향 및 유연성 부여 */
+      /* 데스크탑 기본 높이 */
       min-height: 580px; 
       perspective: 1000px;
     }
@@ -548,7 +548,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      /* 내용이 넘칠 경우 내부 스크롤이 아닌 카드 크기에 맞게 표시되도록 설정 */
+      /* 내용이 넘칠 경우 가독성을 위해 overflow 설정 유지 */
       overflow: visible; 
     }
     .card-current { transform: rotateY(0deg); z-index: 2; }
@@ -585,13 +585,14 @@
       100% { opacity: 1; transform: scale(1); }
     }
 
-    /* 모바일 반응형: 텍스트가 세로로 길어지므로 카드 높이를 대폭 확보 */
+    /* 모바일 반응형: 사진에서 확인된 텍스트 넘침 현상을 해결하기 위해 높이 대폭 확장 */
     @media (max-width: 768px) {
-      .insight-card-wrapper { min-height: 720px; }
+      .insight-card-wrapper { min-height: 850px; }
       .insight-card { padding: 25px 20px; }
     }
     @media (max-width: 480px) {
-      .insight-card-wrapper { min-height: 850px; }
+      /* 가장 좁은 화면에서도 LAST UPDATED 문구까지 여유 있게 포함되도록 설정 */
+      .insight-card-wrapper { min-height: 1050px; }
       .insight-card { padding: 20px 15px; }
     }
   </style>
