--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       <div style="display: flex; align-items: center; gap: 15px;">
         <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 5px 10px; border-radius: 6px;">
           <span class="status-dot"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">Upcoming</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">IN PROGRESS</span>
         </div>
         <div style="display: flex; flex-direction: column; gap: 2px;">
           <div style="display: flex; align-items: center; gap: 8px;">
@@ -411,7 +411,7 @@
     
     <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="text-decoration: none; display: block; transition: transform 0.3s ease;">
       <div style="background: #ffffff; padding: 30px 25px; border-radius: 24px; border: 1px solid #e1e8ed; box-shadow: 0 15px 35px rgba(0,0,0,0.06); position: relative; overflow: hidden; border-top: 6px solid #c98a2e; height: 100%; box-sizing: border-box;">
-        <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">UPCOMING</div>
+        <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">IN PROGRESS</div>
         
         <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2;">Compadres Collegiate</h3>
         <p style="margin: 0; font-weight: 700; color: #c98a2e; font-size: 15px;">Spring Season Opener</p>
