--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -398,13 +398,13 @@
 <div class="live-event-card">
   <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
     <div style="display: flex; align-items: center; gap: 12px;">
-      <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">UPCOMING</span>
+      <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">IN PROGRESS</span>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
         <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 71/6,701 yards</div>
       </div>
     </div>
-    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 29, 2026</div>
+    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 31, 2026</div>
   </div>
 
   <div>
@@ -442,7 +442,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">IN PROGRESS</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
