--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
       50% { opacity: 0.3; transform: scale(0.8); }
       100% { opacity: 1; transform: scale(1); }
     }
-    .status-dot { width: 6px; height: 6px; background-color: #ffffff; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
+    /* status-dot 색상을 녹색(#10b981)으로 수정 */
+    .status-dot { width: 6px; height: 6px; background-color: #10b981; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
     
     /* 두 카드의 공통 스타일 적용 */
     .activity-card, .focus-container {
