--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -419,7 +419,7 @@
       </div>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
-        <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 71/6,701 yards</div>
+        <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72/6,701 yards</div>
       </div>
     </div>
     <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 31, 2026</div>
@@ -694,7 +694,7 @@
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Feb 2-4, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Compadres Collegiate (UTRGV)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 71/6,701 yards</div>
+              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
@@ -960,13 +960,13 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 129.0694 / Pts: 3.3178</div>
               <div class="mobile-score-bar">
-                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71</span>-71-76</span></div>
+                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71-71</span>-76</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">218</span></div>
                 <div class="m-item"><span class="m-label">PAR</span><span class="m-value">+2</span></div>
                 <div class="m-item"><span class="m-label">FINISH</span><span class="m-value">T24</span></div>
               </div>
             </td>
-            <td class="hide-on-mobile"><span style="color:#e53935;font-weight:800;">71</span>-71-76</td>
+            <td class="hide-on-mobile"><span style="color:#e53935;font-weight:800;">71-71</span>-76</td>
             <td class="hide-on-mobile">218</td>
             <td class="hide-on-mobile" style="font-weight: 700;">+2</td>
             <td class="hide-on-mobile" style="font-weight: 700;">T24</td>
@@ -982,13 +982,13 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 232.6656 / Pts: 4.9097</div>
               <div class="mobile-score-bar">
-                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71</span>-70</span></div>
+                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71-70</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">215</span></div>
                 <div class="m-item"><span class="m-label">PAR</span><span class="m-value" style="color:#e53935;">-1</span></div>
                 <div class="m-item"><span class="m-label">FINISH</span><span class="m-value">T12</span></div>
               </div>
             </td>
-            <td class="hide-on-mobile">74-<span style="color:#e53935;font-weight:800;">71</span>-70</td>
+            <td class="hide-on-mobile">74-<span style="color:#e53935;font-weight:800;">71-70</span></td>
             <td class="hide-on-mobile">215</td>
             <td class="hide-on-mobile" style="font-weight: 900; color:#e53935;">-1</td>
             <td class="hide-on-mobile" style="font-weight: 800;">T12</td>
