--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -216,10 +216,13 @@
   </style>
 
   <div class="return-btn-container" style="display: flex; justify-content: flex-start;">
-    <a href="ncaa-stats.html" class="return-link" style="text-decoration: none; font-size: 12px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 10px 18px; border-radius: 10px; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15); letter-spacing: 0.5px;">
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
-        RETURN TO CURRENT SPRING 2026 STATS
-    </a>
+<a href="ncaa-stats.html#fall-archive-section" class="return-link" style="text-decoration: none; font-size: 12px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 10px 18px; border-radius: 10px; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15); letter-spacing: 0.5px;">
+    <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="19" y1="12" x2="5" y2="12"></line>
+        <polyline points="12 19 5 12 12 5"></polyline>
+    </svg>
+    RETURN TO CURRENT SPRING 2026 STATS
+</a>
   </div>
 </div>
 
@@ -600,10 +603,13 @@
 </div>
 
 <div class="return-btn-container" style="display: flex; justify-content: center;">
-    <a href="ncaa-stats.html" class="return-link" style="text-decoration: none; font-size: 12px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 10px 18px; border-radius: 10px; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15); letter-spacing: 0.5px;">
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
-        RETURN TO CURRENT SPRING 2026 STATS
-    </a>
+   <a href="ncaa-stats.html#fall-archive-section" class="return-link" style="text-decoration: none; font-size: 12px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 10px 18px; border-radius: 10px; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15); letter-spacing: 0.5px;">
+    <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="19" y1="12" x2="5" y2="12"></line>
+        <polyline points="12 19 5 12 12 5"></polyline>
+    </svg>
+    RETURN TO CURRENT SPRING 2026 STATS
+</a>
   </div>
 
  <div style="text-align: center; padding-top: 20px; margin-top: 40px; border-top: 1px solid #f1f1f1; clear: both;">
