--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -381,13 +381,13 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 129.0694 / Pts: 3.3178</div>
               <div class="mobile-score-bar">
-                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71</span>-71-76</span></div>
+                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71-71</span>-76</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">218</span></div>
                 <div class="m-item"><span class="m-label">PAR</span><span class="m-value">+2</span></div>
                 <div class="m-item"><span class="m-label">FINISH</span><span class="m-value">T24</span></div>
               </div>
             </td>
-            <td class="hide-on-mobile" style="text-align: center;"><span style="color:#e53935;font-weight:800;">71</span>-71-76</td>
+            <td class="hide-on-mobile" style="text-align: center;"><span style="color:#e53935;font-weight:800;">71-71</span>-76</td>
             <td class="hide-on-mobile" style="text-align: center;">218</td>
             <td class="hide-on-mobile" style="text-align: center; font-weight: 700;">+2</td>
             <td class="hide-on-mobile" style="text-align: center; font-weight: 700;">T24</td>
@@ -403,13 +403,13 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 232.6656 / Pts: 4.9097</div>
               <div class="mobile-score-bar">
-                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71</span>-70</span></div>
+                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71-70</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">215</span></div>
                 <div class="m-item"><span class="m-label">PAR</span><span class="m-value" style="color:#e53935;">-1</span></div>
                 <div class="m-item"><span class="m-label">FINISH</span><span class="m-value">T12</span></div>
               </div>
             </td>
-            <td class="hide-on-mobile" style="text-align: center;">74-<span style="color:#e53935;font-weight:800;">71</span>-70</td>
+            <td class="hide-on-mobile" style="text-align: center;">74-<span style="color:#e53935;font-weight:800;">71-70</span></td>
             <td class="hide-on-mobile" style="text-align: center;">215</td>
             <td class="hide-on-mobile" style="text-align: center; font-weight: 900; color:#e53935;">-1</td>
             <td class="hide-on-mobile" style="text-align: center; font-weight: 800;">T12</td>
