--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -849,10 +849,10 @@
   </div>
 
   <div style="text-align: center; padding: 20px; background: #f8f9fa; border-radius: 12px; border: 1px solid #e2e8f0; box-sizing: border-box; width: 100%;">
-    <p style="margin: 0; font-size: 14px; color: #666; line-height: 1.6;">
-      Scores will be updated live following the conclusion of each tournament round. 
-      <br><span style="color: #2e7d32; font-weight: 700;">● Live Scoring</span> available via Golfstat / Official Tournament Channels.
-    </p>
+<p style="margin: 0; font-size: 14px; color: #666; line-height: 1.6;">
+  Scores will be updated live following the conclusion of each tournament round. 
+  <br><span style="color: #2e7d32; font-weight: 700;">● Live Scoring</span> available via scoreboard.clippd.com / Golfstat / Official Tournament Channels.
+</p>
   </div>
 </div>
   
