--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1375,7 +1375,6 @@
       position: relative;
       overflow: hidden;
       width: 100%;
-      padding: 0 15px;
       box-sizing: border-box;
     }
     #thumbScroll {
@@ -1386,16 +1385,19 @@
     .thumb-page {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(3, 280px); /* 900px 너비에 맞춘 높이 조정 */
+      grid-template-rows: repeat(3, 280px);
       gap: 15px;
       flex: 0 0 100%;
+      width: 100%;
       box-sizing: border-box;
-      padding-bottom: 20px;
+      padding: 0 15px 20px;
     }
     .thumb-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      /* 3, 6번 요청: 썸네일 얼굴 위치 최적화 */
+      object-position: center 20%; 
       border-radius: 16px;
       cursor: pointer;
       border: 1px solid #f1f1f1;
@@ -1406,11 +1408,18 @@
       transform: translateY(-5px);
       box-shadow: 0 15px 30px rgba(0,0,0,0.1);
     }
-    /* 6번 요청: 얼굴 위치 조정 */
-    .pos-focus { object-position: center 25%; }
-    .pos-center { object-position: center center; }
+    
+    .pos-center { object-position: center center !important; }
 
-    /* 내비게이션 화살표 */
+    /* 2번 요청: 모바일 최적화 (길게 늘어짐 방지) */
+    @media (max-width: 768px) {
+      .thumb-page {
+        grid-template-columns: repeat(2, 1fr); /* 모바일은 2열 */
+        grid-template-rows: repeat(3, 220px); /* 3행으로 고정하여 6개씩 표시 */
+      }
+      .scroll-nav { width: 36px !important; height: 36px !important; }
+    }
+
     .scroll-nav {
       position: absolute;
       top: 55%;
@@ -1430,8 +1439,8 @@
       color: #0c2340;
     }
     .scroll-nav:hover { background: #0c2340; color: #fff; }
-    .scroll-nav.prev { left: -5px; }
-    .scroll-nav.next { right: -5px; }
+    .scroll-nav.prev { left: 5px; }
+    .scroll-nav.next { right: 5px; }
   </style>
 
   <div class="scroll-nav prev" onclick="scrollThumbs(-1)">
@@ -1444,24 +1453,24 @@
   <div id="thumbWrapper">
     <div id="thumbScroll">
       <div class="thumb-page">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg" onclick="popupGallery(0)" class="thumb-img pos-focus">
+        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg" onclick="popupGallery(0)" class="thumb-img">
         <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(1)" class="thumb-img pos-center">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(2)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(3)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(4)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(5)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(6)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(7)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(8)" class="thumb-img pos-focus">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(9)" class="thumb-img pos-focus">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(2)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(3)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(4)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(5)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(6)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(7)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(8)" class="thumb-img">
+        <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(9)" class="thumb-img">
         <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(10)" class="thumb-img pos-center">
         <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(11)" class="thumb-img pos-center">
       </div>
       <div class="thumb-page">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(12)" class="thumb-img pos-focus">
+        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(12)" class="thumb-img">
         <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(13)" class="thumb-img pos-center">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(14)" class="thumb-img pos-focus">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(15)" class="thumb-img pos-focus">
+        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(14)" class="thumb-img">
+        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(15)" class="thumb-img">
       </div>
     </div>
   </div>
@@ -1487,11 +1496,12 @@
     ];
 
     let currentThumbPage = 0;
-    const totalPages = Math.ceil(images.length / 12);
-
+    
     function scrollThumbs(dir) {
-      currentThumbPage = (currentThumbPage + dir + totalPages) % totalPages;
-      document.getElementById('thumbScroll').style.transform = `translateX(-${currentThumbPage * 100}%)`;
+      const scrollElement = document.getElementById('thumbScroll');
+      const pages = document.querySelectorAll('.thumb-page');
+      currentThumbPage = (currentThumbPage + dir + pages.length) % pages.length;
+      scrollElement.style.transform = `translateX(-${currentThumbPage * 100}%)`;
     }
 
     function popupGallery(index) {
@@ -1507,20 +1517,20 @@
             <title>Joshua Hong - Gallery</title>
             <style>
               body { margin: 0; background: #000; color: white; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; overflow: hidden; }
-              #mainImg { max-width: 90%; max-height: 75vh; object-fit: contain; border-radius: 8px; transition: 0.2s; opacity: 1; box-shadow: 0 0 30px rgba(255,255,255,0.1); }
-              .nav-btn { position: absolute; top: 50%; transform: translateY(-50%); font-size: 70px; color: rgba(255,255,255,0.3); cursor: pointer; padding: 40px; user-select: none; transition: 0.3s; z-index: 10; }
-              .nav-btn:hover { color: #fff; background: rgba(255,255,255,0.05); }
+              #mainImg { max-width: 90%; max-height: 72vh; object-fit: contain; border-radius: 8px; transition: 0.2s; opacity: 1; box-shadow: 0 0 30px rgba(255,255,255,0.1); }
+              .nav-btn { position: absolute; top: 50%; transform: translateY(-50%); font-size: 80px; color: rgba(255,255,255,0.25); cursor: pointer; padding: 20px 40px; user-select: none; transition: 0.3s; z-index: 10; }
+              .nav-btn:hover { color: #fff; background: rgba(255,255,255,0.1); }
               #prev { left: 0; } #next { right: 0; }
-              #close { position: absolute; top: 20px; right: 20px; font-size: 40px; cursor: pointer; opacity: 0.6; z-index: 20; transition: 0.3s; }
-              #close:hover { opacity: 1; transform: rotate(90deg); }
-              .bottom-controls { position: absolute; bottom: 35px; display: flex; flex-direction: column; align-items: center; gap: 15px; }
-              .close-btn-bottom { background: #fff; color: #000; border: none; padding: 10px 35px; border-radius: 25px; font-weight: 800; font-size: 13px; cursor: pointer; letter-spacing: 1px; transition: 0.3s; }
+              #close-x { position: absolute; top: 20px; right: 20px; font-size: 45px; cursor: pointer; opacity: 0.6; z-index: 20; transition: 0.3s; line-height: 1; }
+              #close-x:hover { opacity: 1; transform: rotate(90deg); }
+              .bottom-controls { position: absolute; bottom: 30px; display: flex; flex-direction: column; align-items: center; gap: 15px; }
+              .close-btn-bottom { background: #fff; color: #000; border: none; padding: 12px 45px; border-radius: 30px; font-weight: 800; font-size: 14px; cursor: pointer; letter-spacing: 1px; transition: 0.3s; }
               .close-btn-bottom:hover { background: #ff4d4d; color: #fff; }
               .counter { font-size: 14px; opacity: 0.5; letter-spacing: 2px; }
             </style>
           </head>
           <body>
-            <div id="close" onclick="window.close()">×</div>
+            <div id="close-x" onclick="window.close()">×</div>
             <div id="prev" class="nav-btn" onclick="move(-1)">❮</div>
             <img id="mainImg" src="${images[index]}">
             <div id="next" class="nav-btn" onclick="move(1)">❯</div>
