--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1397,8 +1397,8 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      /* 얼굴 위치 조정: 위에서 15% 지점에 초점 */
-      object-position: 50% 15%; 
+      /* 썸네일 얼굴 위치 조정 */
+      object-position: center 15%; 
       border-radius: 16px;
       cursor: pointer;
       border: 1px solid #f1f1f1;
@@ -1413,19 +1413,20 @@
     
     .pos-center { object-position: center center !important; }
 
-    /* 모바일 에러 수정: 겹침 방지 및 얼굴 위치 재조정 */
+    /* 모바일 겹침 및 얼굴 잘림 해결 */
     @media (max-width: 768px) {
       .thumb-page {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 180px); /* 높이를 줄여 겹침 방지 */
-        gap: 10px;
-        padding: 0 10px 20px;
-        min-height: 580px;
+        grid-template-rows: repeat(3, auto); /* 높이 자동화로 겹침 해결 */
+        gap: 12px;
+        padding: 0 12px 20px;
       }
       .thumb-img {
-        object-position: 50% 10%; /* 모바일에서 더 상단 고정 */
+        aspect-ratio: 1 / 1.1; /* 모바일 세로 비율 고정 */
+        height: auto;
+        object-position: center 15%;
       }
-      .scroll-nav { width: 38px !important; height: 38px !important; top: 50% !important; }
+      .scroll-nav { width: 36px !important; height: 36px !important; top: 50% !important; }
     }
 
     .scroll-nav {
@@ -1574,6 +1575,7 @@
     }
   </script>
 </div>
+  
   
 
   <div style="text-align: center; padding-top: 20px; margin: 40px 15px 0; border-top: 1px solid #f1f1f1;">
