--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -422,7 +422,7 @@
         <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72/6,701 yards</div>
       </div>
     </div>
-    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 31, 2026</div>
+    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Feb 1, 2026</div>
   </div>
 
   <div>
@@ -450,17 +450,25 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
+                <span>Scorecard</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 1, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">70</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-2</span></div>
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">IN PROGRESS</td>
+          <td class="hide-mobile under-par">70</td>
+          <td class="hide-mobile under-par">-2</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">FINISHED</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
