--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
 </div>
 
-  <div class="activity-card">
+<div class="activity-card">
     <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
       <div style="display: flex; align-items: center; gap: 15px;">
         <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 5px 10px; border-radius: 6px;">
@@ -360,7 +360,16 @@
             <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Compadres Collegiate</span>
             <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 1-3)</span>
           </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 500;">Iberostar Playa Paraiso, Mexico</span>
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <span style="color: #64748b; font-size: 12px; font-weight: 500;">Iberostar Playa Paraiso, Mexico</span>
+            <span style="color: #e2e8f0; font-size: 12px;">|</span>
+            <div style="display: flex; align-items: center; gap: 6px; font-size: 12px; font-weight: 800;">
+              <span style="color: #94a3b8;">R1-R2-R3:</span>
+              <span style="color: #e74c3c;">70</span>
+              <span style="color: #e74c3c;">(-2)</span>
+              <span style="color: #64748b;">Rank TBD</span>
+            </div>
+          </div>
         </div>
       </div>
       <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
