--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
 </div>
 
+
+  
 <div class="activity-card">
     <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
       <div style="display: flex; align-items: center; gap: 15px;">
@@ -360,29 +362,39 @@
             <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Compadres Collegiate</span>
             <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 1-3)</span>
           </div>
-          <div style="display: flex; align-items: center; gap: 10px;">
+          <div style="display: flex; align-items: center; gap: 12px;">
             <span style="color: #64748b; font-size: 12px; font-weight: 500;">Iberostar Playa Paraiso, Mexico</span>
             <span style="color: #e2e8f0; font-size: 12px;">|</span>
-            <div style="display: flex; align-items: center; gap: 6px; font-size: 12px; font-weight: 800;">
-              <span style="color: #94a3b8;">R1-R2-R3:</span>
-              <span style="color: #e74c3c;">70</span>
-              <span style="color: #e74c3c;">(-2)</span>
-              <span style="color: #64748b;">Rank TBD</span>
+            <div style="display: flex; align-items: center; gap: 10px; font-size: 12px; font-weight: 800;">
+              <div style="display: flex; align-items: center; gap: 4px;">
+                <span style="color: #94a3b8;">R1-R2-R3:</span>
+                <span style="color: #e74c3c;">70</span>
+                <span style="color: #94a3b8;">-</span>
+                <span style="color: #94a3b8;">-</span>
+              </div>
+              <div style="display: flex; align-items: center; gap: 4px;">
+                <span style="color: #94a3b8;">TOTAL:</span>
+                <span style="color: #e74c3c;">-2</span>
+              </div>
+              <div style="display: flex; align-items: center; gap: 4px;">
+                <span style="color: #94a3b8;">RANK:</span>
+                <span style="color: #0c2340;">1st</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
-        <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">
-          View Current Status
-        </span>
-        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 12px; border-radius: 6px; border: 1px solid #e2e8f0; display: flex; align-items: center; gap: 6px; text-decoration: none;">
+        <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">VIEW</span>
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
       </a>
     </div>
   </div>
+
+  
 
   <a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
     <div class="focus-container">
