--- a/index.html
+++ b/index.html
@@ -357,31 +357,32 @@
           <span class="status-dot"></span>
           <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">IN PROGRESS</span>
         </div>
-        <div style="display: flex; flex-direction: column; gap: 2px;">
+        <div style="display: flex; flex-direction: column; gap: 5px;">
           <div style="display: flex; align-items: center; gap: 8px;">
             <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Compadres Collegiate</span>
             <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 1-3)</span>
           </div>
-          <div style="display: flex; align-items: center; gap: 12px;">
-            <span style="color: #64748b; font-size: 12px; font-weight: 500;">Iberostar Playa Paraiso, Mexico</span>
-            <span style="color: #e2e8f0; font-size: 12px;">|</span>
-            <div style="display: flex; align-items: center; gap: 10px; font-size: 12px; font-weight: 800;">
-              <div style="display: flex; align-items: center; gap: 4px;">
-                <span style="color: #94a3b8;">R1-R2-R3:</span>
-                <span style="color: #e74c3c;">70</span>
-                <span style="color: #94a3b8;">-</span>
-                <span style="color: #94a3b8;">-</span>
-              </div>
-              <div style="display: flex; align-items: center; gap: 4px;">
-                <span style="color: #94a3b8;">TOTAL:</span>
-                <span style="color: #e74c3c;">-2</span>
-              </div>
-              <div style="display: flex; align-items: center; gap: 4px;">
-                <span style="color: #94a3b8;">RANK:</span>
-                <span style="color: #0c2340;">1st</span>
-              </div>
-            </div>
-          </div>
+          
+          <table style="border-collapse: collapse; margin-top: 2px;">
+            <thead>
+              <tr>
+                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: left; padding: 0 12px 2px 0; text-transform: uppercase;">R1-R2-R3</th>
+                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 12px 2px 12px; text-transform: uppercase;">Par</th>
+                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 12px 2px 12px; text-transform: uppercase;">Total</th>
+                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 0 2px 12px; text-transform: uppercase;">Rank</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="color: #e74c3c; font-size: 13px; font-weight: 900; padding: 0 12px 0 0; border-right: 1px solid #e2e8f0;">70 - &nbsp;&nbsp; - &nbsp;&nbsp;</td>
+                <td style="color: #e74c3c; font-size: 13px; font-weight: 900; text-align: center; padding: 0 12px; border-right: 1px solid #e2e8f0;">-2</td>
+                <td style="color: #0c2340; font-size: 13px; font-weight: 900; text-align: center; padding: 0 12px; border-right: 1px solid #e2e8f0;">70</td>
+                <td style="color: #0c2340; font-size: 13px; font-weight: 900; text-align: center; padding: 0 0 0 12px;">1</td>
+              </tr>
+            </tbody>
+          </table>
+          
+          <span style="color: #64748b; font-size: 11px; font-weight: 500; margin-top: 2px;">Iberostar Playa Paraiso, Mexico</span>
         </div>
       </div>
       <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 12px; border-radius: 6px; border: 1px solid #e2e8f0; display: flex; align-items: center; gap: 6px; text-decoration: none;">
